# MemoryDecorator

./: CMakeLists.txt  main.cpp
include/memory/: memory.h  types.h
include/memory/allocators/: dram_alloc.h  mcdram_alloc.h
include/memory/decorators/: alignment_dec.h  debug_dec.h  message_dec.h  null_dec.h  sequence_number_dec.h
include/memory/validators/: fence_val.h  null_val.h
include/utils/: literals.h  md_literals.h  md_preprocessor.h  md_singleton.h  md_string.h  md_types.h  singleton.h  string.h  types.h
